--- a/pexels-start.html
+++ b/pexels-start.html
@@ -136,7 +136,7 @@
           </p>
           <p>
             <button class="btn btn-primary my-2" id="load">Load Images</button>
-            <button href="#" class="btn btn-secondary my-2">
+            <button href="#" class="btn btn-secondary my-2" id="reLoad">
               Load Secondary Images
             </button>
           </p>
